--- a/sub/sub.html
+++ b/sub/sub.html
@@ -348,6 +348,7 @@
                     </ul> <!-- list_option_more -->
                 </div> <!-- list_option -->
 
+                <div class="sub_content">
                 <div class="booking_option">
                     <div class="option_title">
                         <h3>세부 검색 옵션</h3>
@@ -580,6 +581,72 @@
                         </li>
                     </ul> <!-- option_list -->
                 </div> <!-- booking_option -->
+
+                <div class="hotel">
+                    <div class="h_list">
+                        <div class="swiper h_img1">
+                            <div class="heart">
+                                <img src="../images/common/icon_heart.svg" alt="찜하기 버튼">
+                                <img src="../images/common/icon_heart_fill.svg" alt="찜하기 취소 버튼">
+                            </div> <!-- heart -->
+
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide">
+                                    <img src="../images/sub/near1_1.jpg" alt="신라스테이 호텔 사진1">
+                                </li>
+                                <li class="swiper-slide">
+                                    <img src="../images/sub/near1_2.jpg" alt="신라스테이 호텔 사진2">
+                                </li>
+                                <li class="swiper-slide">
+                                    <img src="../images/sub/near1_3.jpg" alt="신라스테이 호텔 사진3">
+                                </li>
+                                <li class="swiper-slide">
+                                    <img src="../images/sub/near1_4.jpg" alt="신라스테이 호텔 사진4">
+                                </li>
+                            </ul> <!-- wrapper -->
+
+                            <div class="swiper-pagination"></div>
+                        </div> <!-- h_img -->
+                        <div class="h_info">
+                            <div class="title_wrap">
+                                <div class="h_title">
+                                    <h3>신라스테이 호텔</h3>
+                                    <p>부산 해운대구</p>
+                                </div> <!-- h_title -->
+                                <div class="h_level">
+                                    <p class="review">4.8</p>
+                                    <p>5성급</p>
+                                </div> <!-- h_level -->
+                            </div> <!-- title_wrap -->
+                            <div class="site">
+                                <img src="../images/sub/CTRIPHOTELHC.png" alt="트립닷컴 로고 이미지">
+                                <p>추가할인 5%</p>
+                                <p>204,343원</p>
+                                <p>194,126<span>원</span></p>
+                            </div> <!-- site -->
+                            <div class="site">
+                                <img src="../images/sub/AGODA.png" alt="아고다 로고 이미지">
+                                <div class="benefit">
+                                <p>무료 인터넷</p>
+                                <ul>
+                                    <li>조식 포함</li>
+                                    <li>무료 취소</li>
+                                    <li>무료 주차</li>
+                                </ul>
+                            </div> <!-- benefit -->
+                                <p>204,343원</p>
+                                <p>194,126<span>원</span></p>
+                            </div> <!-- site -->
+                            <div class="site">
+                                <img src="../images/sub/TRIPBTOZHC.png" alt="트립비투제트 로고 이미지">
+                                <p>추가할인 5%</p>
+                                <p>204,343원</p>
+                                <p>194,126<span>원</span></p>
+                            </div> <!-- site -->
+                        </div> <!-- h_info -->
+                    </div> <!-- h_list -->
+                </div> <!-- hotel -->
+            </div> <!-- sub_content -->
             </div> <!-- inner -->
         </div> <!-- contents -->
 
